// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KtAccordion.vue > renders correctly (with props) 1`] = `
<div
  class="kt-accordion"
  data-v-b260b1b5=""
>
  <div
    class="kt-accordion__header"
    data-test="my-accordion"
    data-v-b260b1b5=""
  >
    <div
      class="kt-accordion__title"
      data-v-b260b1b5=""
    >
      <i
        class="yoco kt-accordion__icon"
        data-v-b260b1b5=""
      >
        bookmark
      </i>
      <div
        class="kt-accordion__text"
        data-v-b260b1b5=""
      >
        My Accordion
      </div>
    </div>
    <div
      class="kt-accordion__toggle"
      data-v-b260b1b5=""
    >
      <i
        class="yoco"
        data-v-b260b1b5=""
      >
        plus
      </i>
    </div>
  </div>
  <div
    class="kt-accordion__content kt-accordion__content--is-closed"
    data-v-b260b1b5=""
  >
    <div
      class="kt-accordion__inner"
      data-v-b260b1b5=""
    />
  </div>
</div>
`;

exports[`KtAccordion.vue > renders correctly 1`] = `
<div
  class="kt-accordion"
  data-v-b260b1b5=""
>
  <div
    class="kt-accordion__header"
    data-v-b260b1b5=""
  >
    <div
      class="kt-accordion__title"
      data-v-b260b1b5=""
    >
      <!---->
      <div
        class="kt-accordion__text"
        data-v-b260b1b5=""
      />
    </div>
    <div
      class="kt-accordion__toggle"
      data-v-b260b1b5=""
    >
      <i
        class="yoco"
        data-v-b260b1b5=""
      >
        minus
      </i>
    </div>
  </div>
  <div
    class="kt-accordion__content kt-accordion__content--is-open"
    data-v-b260b1b5=""
  >
    <div
      class="kt-accordion__inner"
      data-v-b260b1b5=""
    />
  </div>
</div>
`;
